# paragon_firewall_ce

./: .clang-format  .gitignore  LICENSE  Project  README.md
FirewallApp/: AppDelegate.swift  Config.xcconfig  ExtensionLoader.swift  Extensions.swift  FirewallApp.entitlements  Info.plist  LogWindowController.swift  StatusBarMenu.swift  SystemExtensions.swift  Toolbar.swift
FirewallApp.xcodeproj/: project.pbxproj
FirewallApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FirewallApp/Base.lproj/: Main.storyboard
FirewallApp/Models/: MonitoredAppModel.swift  NetFilterModel.swift
FirewallApp/Views/: AccessCheckView.swift  ApplicationStatisticsView.swift  AttributedText.swift  ContentView.swift  ExtensionApprovalView.swift  FastList.swift  IconView.swift  LinkButton.swift  MonitoredAppBriefStats.swift  SelectableLabel.swift  (+1 more)
NetworkFilterManager/: Config.xcconfig
libs/: libs.xcconfig
libs/mach/mach/: CMakeLists.txt  bootstrap.cpp  bootstrap.hpp  coding.cpp  coding.hpp  fileport.cpp  fileport.hpp  message.cpp  message.hpp  message_handler.hpp  port.hpp  server.cpp  server.hpp  server_internal.hpp
libs/mcom/mcom/: CMakeLists.txt  block_ptr.hpp  cf.cpp  cf.hpp  codable.hpp  deferred.hpp  directory.cpp  directory.hpp  disk_name.cpp  disk_name.hpp  dispatch.cpp  dispatch.hpp  file.cpp  file.hpp  file_path.cpp  file_path.hpp  iokit.cpp  iokit.hpp  optional.hpp  process.cpp  process.hpp  result.hpp  security.cpp  security.hpp  string.cpp  string.hpp  sync.hpp  types.hpp  utility.hpp  uuid.cpp  uuid.hpp
utils/: format-code  license-insert  utils.rb  vcs.rb
(+78 files in other folders)
